crates/cli/tests/snapshots/initialize_tests__initialize_directory_with_metadata.snap
---
source: crates/cli/tests/initialize_tests.rs
expression: contents
---
packagingDefinition:
  type: PrebuiltDockerImage
  dockerImage: ghcr.io/hasura/ndc-bigquery:latest
supportedEnvironmentVariables:
- name: HASURA_BIGQUERY_SERVICE_KEY
  description: The BigQuery service key
- name: HASURA_BIGQUERY_PROJECT_ID
  description: The BigQuery project ID/name
- name: HASURA_BIGQUERY_DATASET_ID
  description: The BigQuery dataset ID/name
commands:
  update: hasura-ndc-bigquery update
cliPlugin:
  name: ndc-bigquery
  version: latest
dockerComposeWatch:
- path: ./
  target: /etc/connector
  action: sync+restart
nativeToolchainDefinition:
  commands:
    start:
      type: ShellScript
      bash: |-
        #!/usr/bin/env bash
        set -eu -o pipefail
        HASURA_CONFIGURATION_DIRECTORY="$HASURA_PLUGIN_CONNECTOR_CONTEXT_PATH" ndc-bigquery serve
      powershell: |-
        $ErrorActionPreference = "Stop"
        $env:HASURA_CONFIGURATION_DIRECTORY="$env:HASURA_PLUGIN_CONNECTOR_CONTEXT_PATH"; & ndc-bigquery.exe serve
    update:
      type: ShellScript
      bash: |-
        #!/usr/bin/env bash
        set -eu -o pipefail
        "$HOME/.ddn/plugins/store/ndc-bigquery/$BIGQUERY_VERSION/hasura-ndc-bigquery" update
      powershell: |-
        $ErrorActionPreference = "Stop"
        & "$env:USERPROFILE\.ddn\plugins\store\ndc-bigquery\$env:BIGQUERY_VERSION\hasura-ndc-bigquery.exe" update
